docs/api/qiskit/0.24/qiskit.transpiler.passes.CXCancellation.mdx
---
title: CXCancellation
description: API reference for qiskit.transpiler.passes.CXCancellation
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CXCancellation
---

<span id="qiskit-transpiler-passes-cxcancellation" />

# qiskit.transpiler.passes.CXCancellation

<Class id="qiskit.transpiler.passes.CXCancellation" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/optimization/cx_cancellation.py" signature="CXCancellation(*args, **kwargs)">
  Cancel back-to-back cx gates in dag.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.CXCancellation.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                      |                                     |
  | -------------------------------------------------------------------------------------------------------------------- | ----------------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.CXCancellation.__init__ "qiskit.transpiler.passes.CXCancellation.__init__")() | Initialize self.                    |
  | [`name`](#qiskit.transpiler.passes.CXCancellation.name "qiskit.transpiler.passes.CXCancellation.name")()             | Return the name of the pass.        |
  | [`run`](#qiskit.transpiler.passes.CXCancellation.run "qiskit.transpiler.passes.CXCancellation.run")(dag)             | Run the CXCancellation pass on dag. |

  ## Attributes

  |                                                                                                                                                              |                                             |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.CXCancellation.is_analysis_pass "qiskit.transpiler.passes.CXCancellation.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.CXCancellation.is_transformation_pass "qiskit.transpiler.passes.CXCancellation.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.CXCancellation.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.CXCancellation.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.CXCancellation.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.CXCancellation.run" name="run" signature="run(dag)">
    Run the CXCancellation pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the directed acyclic graph to run on.

    **Returns**

    Transformed DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>
</Class>

